turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:3: error: not found: value setCouleurSol
	case Color.black => setCouleurSol(Color.white)
                            ^LangtonsAnt:6: error: not found: value setCouleurSol
	case Color.white => setCouleurSol(Color.black)
                            ^