turmites.lessons.turmites.langton.Langton.scala.code
def step() {
getCouleurSol() match{
	case Color.black => setCouleurSol(Color.white)
					gauche()
					avance()
	case Color.white => setCouleurSol(Color.black)
					droite()
					avance()
}
}

	

